Added create car and get user's cars endpoints, removed @Builder from DTOs, added function to convert CarModel and CarBrand to DTO responses and added exceptions for car create